aks/kubernetes-manifests/n8n-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n
  name: n8n-service
  namespace: n8n
spec:
  ports:
  - port: 5678
    protocol: TCP
    targetPort: 5678
  selector:
    app: n8n
  type: ClusterIP
