aks/kubernetes-manifests/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - n8n.olakunle.ca
      secretName: n8n-tls-prod
  rules:
    - host: n8n.olakunle.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service # Your n8n service name
                port:
                  number: 5678 # Or whatever port your n8n service exposes
